# test_of_googletest

./: .gitignore  LICENSE  README.md
GoogleTest_Primer/Multiple_Tests/: README.md
GoogleTest_Primer/Simple_Tests/: CMakeLists.txt  README.md  factorial.cc  factorial.h  factorial_test.cc
Quickstart_CMake/: CMakeLists.txt  README.md
